version 0.6.0 - dd-MMM-yyy
 . Actions: Sequences of Repeats fixes (issue #80)
 . Actions: Added RepeatForEver (issue #93)
 . Actions: Repeat can be reversed (issue #92)
 . CocosNode: added support for Parallax scroller (issue #89)

version 0.5.3 - 18-Nov-2008
 . Actions: Repeat fixes (issue #81)
 . CocosNode: added numberOfRunningActions (issue #72)
 . CocosNode: removeAll fixes (issue #74)
 . CocosNode: stopAction fix (issue #82)
 . CocosNode: supports flipX and flipY (issue #53)
 . CocosNode: supports scaleX and scaleY (issue #54) 
 . Layer: isTouchEnabled, isAccelerometerEnabled are properties (issue #70)
 . Menu: supports CocosNodeOpacity protocol (issue #76)
 . MultiplexLayer: added switchToAndReleaseMe (issue #71)
 . OpenGLSupport: performance improvements (issue #84)
 . Particles: ParticleCount is a property (issue #68)
 . Texture2D: images & RGBA8 fixes (issue #86)
 . TextureMgr: Simulator supports PVRTC images (issue #75)
 . TextureMgr: removeTexture fixed (issue #85)
 . TextureMgr: supports CGImageRef (issue #87)
 . TileMapAtlas: supports TGA RLE format (issue #38)

version 0.5.2 - 04-Nov-2008
 . All: assign [super init] to self (issue #61)
 . Documentation: Add AUTHORS file with the cocos2d's contributors (issue #62)
 . CocosNode: added tags (getByTag, removeByTag)  (issue #52)
 . CocosNode: fixed big memory leak (issue #67)
 . Director: able to remove event enabled nodes (issue #56)
 . Director: can be hidden / unhidden (issue #55)
 . License: Explicit paragraphs that allows cocos2d + closed source projects (issue #57)
 . MenuItemImage: able to modify inner sprites (issue #58)
 . OpenGLSupport: added PowerVR Texture Compression (PVRTC) format support (issue #66)
 . Transitions: don't flicker (issue #60)

version 0.5.1 - 20-Oct-2008
 . Actions: Animation has restoreOriginalFrame argument (issue #46)
 . Actions: CallFunc retains target (issue #42)
 . AtlasNode: renders some artifacts (partially fixed issue #47)