@@ -15,6 +15,7 @@ TILES & TILEMAP:
 
 Resources/Images/tiles.png
 Resources/Images/levelmap.tga
+Resources/Images/background.png
 
 From 'Barbie Seahorse' game:
     http://www.imitationpickles.org/barbie/
