@@ -3,6 +3,8 @@ version 0.6.0 - dd-MMM-yyy
  . Actions: Added RepeatForEver (issue #93)
  . Actions: Repeat can be reversed (issue #92)
  . CocosNode: added support for Parallax scroller (issue #89)
+ . CocosNode: removed deprecated 'named' methods (issue #91)
+ . CocosNode: lazy allocations with timers, children & actions (issue #94)
 
 version 0.5.3 - 18-Nov-2008
  . Actions: Repeat fixes (issue #81)
